--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+    "name": "expressapp",
+    "version": "1.0.0",
+    "dependencies": {
+        "express": "^4.16.4"
+    }
 }
